# Prism

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DUAL_LICENSING.md  LICENSE  LICENSE_COMMERCIAL  PROTECTED_BRANCHES.md  Prism-PRD-Document-SDK.md  QUICKSTART.md  README.md  fix_email_parsers.py  settings.json  tasks.json  test_docx_debug.rs
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/prism-cli/: Cargo.toml
crates/prism-cli/src/: lib.rs  main.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: document.rs  error.rs  format.rs  lib.rs  license.rs  metadata.rs  parser.rs  render.rs
crates/prism-parsers/: Cargo.toml
crates/prism-parsers/src/: lib.rs  registry.rs
crates/prism-parsers/src/archive/: gzip.rs  mod.rs  tar.rs  zip.rs
crates/prism-parsers/src/email/: eml.rs  ics.rs  mbox.rs  mod.rs  msg.rs  vcf.rs
crates/prism-parsers/src/image/: jpeg.rs  mod.rs  png.rs  tiff.rs
crates/prism-parsers/src/office/: docx.rs  excel_styles.rs  legacy.rs  mod.rs  pptx.rs  relationships.rs  shapes.rs  slides.rs  styles.rs  tables.rs  theme.rs  utils.rs  xlsx.rs
crates/prism-parsers/src/pdf/: mod.rs  pdf_parser.rs
crates/prism-parsers/src/text/: csv.rs  html.rs  mod.rs  plain.rs
crates/prism-render/: Cargo.toml
crates/prism-render/src/: html.rs  lib.rs
crates/prism-sandbox/: Cargo.toml
crates/prism-sandbox/src/: lib.rs
crates/prism-server/: Cargo.toml
crates/prism-server/src/: config.rs  convert.rs  lib.rs  main.rs
crates/prism-tests/: Cargo.toml
crates/prism-tests/src/: lib.rs
crates/prism-tests/tests/: corpus_tests.rs
test-files/: ANNOTATE.DOC  WELCOME.DOC  rustoutput.html  sample.json  sample.txt  test_email.eml
web-viewer/: README.md  app.js  index.html  styles.css
