[package]
name = "prism-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Core document model and traits for the Prism document processing SDK"
keywords = ["document", "parsing", "conversion", "pdf", "office"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
