[package]
name = "prism-parsers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Format parser implementations for Prism"
keywords = ["document", "parsing", "pdf", "office", "converter"]
categories = ["parser-implementations"]

[dependencies]
# Internal dependencies
prism-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }

[features]
default = []
# Individual parser features (can be enabled selectively)
parser-pdf = []
parser-office = []
parser-image = []
parser-email = []
parser-archive = []
parser-cad = []
