[package]
name = "prism-parsers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Format parser implementations for Prism"
keywords = ["document", "parsing", "pdf", "office", "converter"]
categories = ["parser-implementations"]

[dependencies]
# Internal dependencies
prism-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
bytes = { workspace = true }
base64 = "0.22"

# Image processing (use 0.25 to match pdfium-render)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }

# Office parsing (modern)
calamine = { version = "0.25", features = ["dates"] }
zip = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }

# Office parsing (legacy - OLE2/CFB)
cfb = "0.7"  # Compound File Binary format reader

# PDF parsing
lopdf = "0.38"  # For metadata extraction and basic parsing

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }

[features]
default = []
# Individual parser features (can be enabled selectively)
parser-pdf = []
parser-office = []
parser-image = []
parser-email = []
parser-archive = []
parser-cad = []
